testdata/invalid/constant_invalid_20.lisp
;;error:2:19-21:unknown type
(defconst (C1 :i5 i8) 2)
